src/components/Plans/PlanCard/PlanCard.module.css
.planCard {
  --_padding: 1rem;

  position: relative;

  &:has(input[type="checkbox"]),
  &:has([data-active]) {
    cursor: pointer;
  }

  &:has(input[type="checkbox"]:checked),
  &:has([data-active="true"]) {
    --_bg-color: var(--very-light-grey);
    --_border-color: var(--border-color-active);
  }
}

.plan {
  --_gap: 0.875rem;
  --_columns: auto 1fr;

  display: grid;
  grid-template-columns: var(--_columns, 1fr);
  gap: var(--_gap, 1rem);
  align-items: start;
}

/* make sure the entire component is clickable even with parent's padding */
.plan::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;

  width: 100%;
  height: 100%;

  cursor: pointer;
}

.imageContainer {
  --_size: 2.5rem;

  position: relative;
  top: 3px;
  width: var(--_size, 1rem);
  height: var(--_size, 1rem);

  background-color: var(--placeholder-primary);

  aspect-ratio: 1;
  border-radius: 50%;
}

.image {
  /* space at mobile:  14px*/
  /* space at desktop: 39px */
  /* margin-bottom: var(--space-bottom, 1rem); */
  width: 100%;
  background-color: var(--grey);
  border-radius: 50%;
}

.title {
  --_fs: 1rem;

  font-size: var(--_fs, 1rem);
  font-weight: 500;
  color: var(--denim);
}

.price {
  --_fs: 0.875rem;
  --_lh: 1.25rem;

  font-size: var(--_fs, 1rem);
  font-weight: 400;
  color: var(--grey);
  line-height: var(--_lh, 1.25rem);
}

.info {
  --_fs: 0.75rem;
  --_lh: 1.25rem;

  font-size: var(--_fs, 1rem);
  font-weight: 400;
  color: var(--denim);
  line-height: var(--_lh, 1rem);
}

